[metadata]
name = mutalyzer-algebra
version = 1.4.2
description = A Boolean Algebra for Genetic Variants
long_description = file: README.md
long_description_content_type = text/markdown
author = Mark A. Santcroos, Jonathan K. Vis
author_email = m.a.santcroos@lumc.nl, j.k.vis@lumc.nl
url = https://github.com/mutalyzer/algebra
keywords = algebra, genomics, graph, string, genetics, edit-distance, alignment, compare, sequence, variants, lcs, relations, hgvs, extractor
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:

[options.entry_points]
console_scripts =
    algebra = algebra.__main__:main

[options.extras_require]
dev = coverage; flake8; pytest
